Update issue templates

--- a/.github/ISSUE_TEMPLATE/-------.md
+++ b/.github/ISSUE_TEMPLATE/-------.md
@@ -7,14 +7,16 @@ assignees: ''
 
 ---
 
-# あなたの機能要求は、問題に関連していますか？
-何が問題なのかを明確かつ簡潔に記述してください。例 私はいつも[...]の時にイライラしています。
+# 機能
+何を解決したいのか明確かつ簡潔に記述してください。
 
-# あなたが望む解決策を記述してください。
+# 解決策
 実現したいことを明確かつ簡潔に記述してください。
+- [ ] task1
+- [ ] task2
 
-# 検討した代替案を記述する。
+# 代替案(省略可)
 あなたが検討した代替案や機能について、明確かつ簡潔に記述してください。
 
-# その他 （英語
+# その他(省略可)
 機能リクエストに関するその他の情報やスクリーンショットをここに追加してください。
