--- a/.github/ISSUE_TEMPLATE/------.md
+++ b/.github/ISSUE_TEMPLATE/------.md
@@ -7,20 +7,20 @@ assignees: ''
 
 ---
 
-# バグを説明してください
+# バグ内容
 そのバグが何であるかを明確かつ簡潔に記述してください。
 
-# 再現するには
+# 再現手順
 動作を再現するための手順です。
 1. 「...」に移動します。
 2. 「....」をクリックします。
 3. スクロールダウンして「....」へ
 4. エラー発生
 
-# 予想される動作について
+# 期待した動作
 何が起こると予想したかを明確かつ簡潔に記述してください。
 
-# スクリーンショット
+# スクリーンショット(省略可)
 必要に応じて、問題を説明するためのスクリーンショットを追加してください。
 
 # 環境
@@ -35,5 +35,5 @@ assignees: ''
  - ブラウザ： [例：純正ブラウザ、safari]
  - バージョン: [例: 22]
 
-# その他
+# その他(省略可)
 問題に関するその他の状況をここに追加してください。
